--- a/packages/sage-react/lib/Modal/Modal.story.mdx
+++ b/packages/sage-react/lib/Modal/Modal.story.mdx
@@ -1,667 +1,173 @@
-import { useState } from 'react';
-import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
+import { ArgsTable, Canvas, Meta, Source, Story } from '@storybook/addon-docs';
+
+import { useEffect, useState }  from 'react';
 
 import { Button } from '../Button';
-import { ProgressBar } from '../ProgressBar';
 import { Icon } from '../Icon';
-import { SageTokens, SageClassnames } from '../configs';
-import { Modal } from './Modal';
+import { Modal } from './Modal'
+import { SageClassnames, SageTokens } from '../configs';
 
-<Meta 
-  title="Sage/Modal" 
-  component={Modal} 
-  subcomponents={{
-    "Modal.Header": Modal.Header,
-    "Modal.HeaderAside": Modal.HeaderAside,
-    "Modal.Body": Modal.Body,
-    "Modal.Footer": Modal.Footer,
-    "Modal.FooterAside": Modal.FooterAside,
-  }}/>
+import { disableArgs, selectArgs } from '../story-support/helpers';
 
-# Modal
+<Meta
+ title="Sage/Modal"
+ component={Modal}
+ subcomponents={{
+  'Modal.Header': Modal.Header,
+  'Modal.HeaderAside': Modal.HeaderAside,
+  'Modal.Body': Modal.Body,
+  'Modal.Footer': Modal.Footer,
+  'Modal.FooterAside': Modal.FooterAside,
+ }}
+ args={{
+    animation: Modal.ANIMATION_PRESETS,
+  }}
+ argTypes={{
+    ...disableArgs(['children', 'onExit']),
+    ...selectArgs({
+      size: Modal.SIZES,
+    })
+ }}
+/>
 
-## Properties
-<ArgsTable story="Default" />
+# Properties
+<ArgsTable of="Default" />
+
+export const DefaultBody = ({ onExit }) => (
+  <>
+    <Modal.Header
+      title="Modal header"
+      aside={(
+        <Button
+          color={Button.COLORS.SECONDARY}
+          iconOnly={true}
+          icon={SageTokens.ICONS.REMOVE}
+          onClick={onExit}
+          subtle={true}
+        >
+          Menu
+        </Button>
+      )}
+    />
+    <Modal.Body gap={Modal.Body.GAP_OPTIONS.LG}>
+      <p className={SageClassnames.TYPE.BODY}>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua.
+      </p>
+      <p className={SageClassnames.TYPE.BODY}>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+        sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua.
+      </p>
+    </Modal.Body>
+    <Modal.Footer>
+      <Button
+        color={Button.COLORS.SECONDARY}
+        onClick={onExit}
+      >
+        Cancel
+      </Button>
+      <Button
+        color={Button.COLORS.PRIMARY}
+        onClick={onExit}
+      >
+        Confirm
+      </Button>
+    </Modal.Footer>
+  </>
+);
+
+export const Template = (args) => {
+  const [active, setActive] = useState(false);
+  const [isClosing, setIsClosing] = useState(false);
+  const onExit = () => {
+    setIsClosing(true);
+    setTimeout(() => {
+      setActive(false);
+      setIsClosing(false);
+    }, 1000);
+  };
+  return (
+    <>
+      <Button
+        color={Button.COLORS.PRIMARY}
+        onClick={() => setActive(true)}
+      >
+        Open Modal
+      </Button>
+      <Modal {...args}
+        active={active}
+        isClosing={isClosing}
+        animation={false}
+        onExit={onExit}>
+        <DefaultBody onExit={onExit} />
+      </Modal>
+    </>
+  );
+};
 
 ## Variants
 
-### Basic
-Basic modals contain a title, a body of content, and a footer with buttons.
-
+### Default
+Default modals contain a title, a body of content, and a footer with buttons.
 <Canvas>
-  <Story name="Default">
-    {(args) => {
-      const [active, setActive] = useState(false);
-      const [isClosing, setIsClosing] = useState(false);
-      const onExit = () => {
-        setIsClosing(true);
-        setTimeout(() => {
-          setActive(false);
-          setIsClosing(false);
-        }, 1000);
-      };
-      return (
-        <>
-          <Button
-            color={Button.COLORS.PRIMARY}
-            onClick={() => setActive(true)}
-          >
-            Open Modal
-          </Button>
-          <Modal
-            {...args}
-            active={active}
-            isClosing={isClosing}
-            onExit={onExit}
-          >
-            <Modal.Header
-              title="Modal header"
-              aside={(
-                <Button
-                  color={Button.COLORS.SECONDARY}
-                  iconOnly={true}
-                  icon={SageTokens.ICONS.REMOVE}
-                  onClick={onExit}
-                  subtle={true}
-                >
-                  Close modal
-                </Button>
-              )}
-            />
-            <Modal.Body gap={Modal.Body.GAP_OPTIONS.LG}>
-              <p className={SageClassnames.TYPE.BODY}>
-                Add a description of the content you're showing in the modal.
-              </p>
-            </Modal.Body>
-            <Modal.Footer>
-              <Button
-                color={Button.COLORS.SECONDARY}
-                onClick={onExit}
-              >
-                Cancel
-              </Button>
-              <Button
-                color={Button.COLORS.PRIMARY}
-                onClick={onExit}
-              >
-                Confirm
-              </Button>
-            </Modal.Footer>
-          </Modal>
-        </>
-      )
-    }}
-    
+  <Story name="Default"
+    args={{
+      active: true
+    }}>
+    { Template.bind({}) }
   </Story>
 </Canvas>
 
-## Destructive
-Destructive modals contain a title, a body of content, and a footer with buttons. The header icon is red and the footer buttons are red.
-<Canvas>
-  <Story name="Destructive">
-    {(args) => {
-      const [active, setActive] = useState(false);
-      const [isClosing, setIsClosing] = useState(false);
-      const onExit = () => {
-        setIsClosing(true);
-        setTimeout(() => {
-          setActive(false);
-          setIsClosing(false);
-        }, 1000);
-      };
-      return (
-        <>
-          <Button
-            color={Button.COLORS.PRIMARY}
-            onClick={() => setActive(true)}
-          >
-            Open Modal
-          </Button>
-          <Modal
-            {...args}
-            active={active}
-            isClosing={isClosing}
-            onExit={onExit}
-          >
-            <Modal.Header
-              title="Delete item"
-              aside={(
-                <Button
-                  color={Button.COLORS.SECONDARY}
-                  iconOnly={true}
-                  icon={SageTokens.ICONS.REMOVE}
-                  onClick={onExit}
-                  subtle={true}
-                >
-                  Close modal
-                </Button>
-              )}
-            />
-            <Modal.Body gap={Modal.Body.GAP_OPTIONS.LG}>
-              <p className={SageClassnames.TYPE.BODY}>
-                Are you sure you want to delete this item? This action cannot be undone.
-              </p>
-            </Modal.Body>
-            <Modal.Footer>
-              <Button
-                color={Button.COLORS.SECONDARY}
-                onClick={onExit}
-              >
-                Cancel
-              </Button>
-              <Button
-                color={Button.COLORS.DANGER}
-                icon={SageTokens.ICONS.TRASH}
-                onClick={onExit}
-              >
-                Delete Item
-              </Button>
-            </Modal.Footer>
-          </Modal>
-        </>
-      )
-    }}
-    
-  </Story>
-</Canvas>
-
-## Header Icon
-
-## Header Image
-
-## Subheader
-Pending
-
-## Footer
-Modals contain a footer that can contain buttons and links
-<Canvas>
-  <Story name="Footer">
-    {(args) => {
-      const [active, setActive] = useState(false);
-      const [isClosing, setIsClosing] = useState(false);
-      const onExit = () => {
-        setIsClosing(true);
-        setTimeout(() => {
-          setActive(false);
-          setIsClosing(false);
-        }, 1000);
-      };
-      return (
-        <>
-          <Button
-            color={Button.COLORS.PRIMARY}
-            onClick={() => setActive(true)}
-          >
-            Open Modal
-          </Button>
-          <Modal
-            {...args}
-            active={active}
-            isClosing={isClosing}
-            onExit={onExit}
-          >
-            <Modal.Header
-              title="Modal header"
-              aside={(
-                <Button
-                  color={Button.COLORS.SECONDARY}
-                  iconOnly={true}
-                  icon={SageTokens.ICONS.REMOVE}
-                  onClick={onExit}
-                  subtle={true}
-                >
-                  Close modal
-                </Button>
-              )}
-            />
-            <Modal.Body gap={Modal.Body.GAP_OPTIONS.LG}>
-              <p className={SageClassnames.TYPE.BODY}>
-                Add a description of the content you're showing in the modal.
-              </p>
-            </Modal.Body>
-            <Modal.Footer>
-              <Button
-                color={Button.COLORS.SECONDARY}
-                onClick={onExit}
-              >
-                Cancel
-              </Button>
-              <Button
-                color={Button.COLORS.PRIMARY}
-                onClick={onExit}
-              >
-                Confirm
-              </Button>
-            </Modal.Footer>
-          </Modal>
-        </>
-      )
-    }}
-  </Story>
-</Canvas>
-
-## Footer Aside
-The footer aside is a section of the footer that can contain additional buttons or links.
-<Canvas>
-  <Story name="Footer Aside">
-    {(args) => {
-      const [active, setActive] = useState(false);
-      const [isClosing, setIsClosing] = useState(false);
-      const onExit = () => {
-        setIsClosing(true);
-        setTimeout(() => {
-          setActive(false);
-          setIsClosing(false);
-        }, 1000);
-      };
-      return (
-        <>
-          <Button
-            color={Button.COLORS.PRIMARY}
-            onClick={() => setActive(true)}
-          >
-            Open Modal
-          </Button>
-          <Modal
-            {...args}
-            active={active}
-            isClosing={isClosing}
-            onExit={onExit}
-          >
-            <Modal.Header
-              title="Modal header"
-              aside={(
-                <Button
-                  color={Button.COLORS.SECONDARY}
-                  iconOnly={true}
-                  icon={SageTokens.ICONS.REMOVE}
-                  onClick={onExit}
-                  subtle={true}
-                >
-                  Close modal
-                </Button>
-              )}
-            />
-            <Modal.Body gap={Modal.Body.GAP_OPTIONS.LG}>
-              <p className={SageClassnames.TYPE.BODY}>
-                Add a description of the content you're showing in the modal.
-              </p>
-            </Modal.Body>
-            <Modal.Footer>
-              <Modal.FooterAside>
-                <Button
-                  color={Button.COLORS.SECONDARY}
-                  onClick={onExit}
-                  subtle={true}
-                >
-                  Link
-                </Button>
-              </Modal.FooterAside>
-              <Button
-                color={Button.COLORS.SECONDARY}
-                onClick={onExit}
-              >
-                Cancel
-              </Button>
-              <Button
-                color={Button.COLORS.PRIMARY}
-                onClick={onExit}
-              >
-                Confirm
-              </Button>
-            </Modal.Footer>
-          </Modal>
-        </>
-      )
-    }}    
-  </Story>
-</Canvas>
-
-## Scrollable Content
-Modals can be configured to allow scrolling of content. This option is useful when the header and footer needs to visible contain actions.
-<Canvas>
-  <Story name="Scrollable Content">
-    {(args) => {
-      const [active, setActive] = useState(false);
-      const [isClosing, setIsClosing] = useState(false);
-      const onExit = () => {
-        setIsClosing(true);
-        setTimeout(() => {
-          setActive(false);
-          setIsClosing(false);
-        }, 1000);
-      };
-      return (
-        <>
-          <Button
-            color={Button.COLORS.PRIMARY}
-            onClick={() => setActive(true)}
-          >
-            Open xs Modal
-          </Button>
-          <Modal
-            {...args}
-            active={active}
-            isClosing={isClosing}
-            onExit={onExit}
-          >
-            <Modal.Header
-              title="Modal header"
-              aside={(
-                <Button
-                  color={Button.COLORS.SECONDARY}
-                  iconOnly={true}
-                  icon={SageTokens.ICONS.REMOVE}
-                  onClick={onExit}
-                  subtle={true}
-                >
-                  Close modal
-                </Button>
-              )}
-            />
-            <Modal.Body gap={Modal.Body.GAP_OPTIONS.LG}>
-              <p className={SageClassnames.TYPE.BODY}>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse urna leo, condimentum nec pellentesque finibus, ultricies pulvinar ante. Donec eu interdum ligula. Pellentesque aliquam ullamcorper orci, nec tempor libero tristique in. Aliquam vitae felis at leo condimentum placerat eget id libero. In dictum tortor ac accumsan aliquam. Donec sit amet tortor porttitor, tincidunt nisl at, egestas lacus. Integer metus augue, aliquet accumsan vulputate eget, tristique id erat. Donec a venenatis nibh, ac molestie risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus in orci vitae ex tempor ultrices in a leo. Sed purus magna, vulputate aliquet ligula eget, consectetur sagittis nunc.
-              </p>
-              <p className={SageClassnames.TYPE.BODY}>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse urna leo, condimentum nec pellentesque finibus, ultricies pulvinar ante. Donec eu interdum ligula. Pellentesque aliquam ullamcorper orci, nec tempor libero tristique in. Aliquam vitae felis at leo condimentum placerat eget id libero. In dictum tortor ac accumsan aliquam. Donec sit amet tortor porttitor, tincidunt nisl at, egestas lacus. Integer metus augue, aliquet accumsan vulputate eget, tristique id erat. Donec a venenatis nibh, ac molestie risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus in orci vitae ex tempor ultrices in a leo. Sed purus magna, vulputate aliquet ligula eget, consectetur sagittis nunc.
-              </p>
-              <p className={SageClassnames.TYPE.BODY}>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse urna leo, condimentum nec pellentesque finibus, ultricies pulvinar ante. Donec eu interdum ligula. Pellentesque aliquam ullamcorper orci, nec tempor libero tristique in. Aliquam vitae felis at leo condimentum placerat eget id libero. In dictum tortor ac accumsan aliquam. Donec sit amet tortor porttitor, tincidunt nisl at, egestas lacus. Integer metus augue, aliquet accumsan vulputate eget, tristique id erat. Donec a venenatis nibh, ac molestie risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus in orci vitae ex tempor ultrices in a leo. Sed purus magna, vulputate aliquet ligula eget, consectetur sagittis nunc.
-              </p>
-              <p className={SageClassnames.TYPE.BODY}>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse urna leo, condimentum nec pellentesque finibus, ultricies pulvinar ante. Donec eu interdum ligula. Pellentesque aliquam ullamcorper orci, nec tempor libero tristique in. Aliquam vitae felis at leo condimentum placerat eget id libero. In dictum tortor ac accumsan aliquam. Donec sit amet tortor porttitor, tincidunt nisl at, egestas lacus. Integer metus augue, aliquet accumsan vulputate eget, tristique id erat. Donec a venenatis nibh, ac molestie risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus in orci vitae ex tempor ultrices in a leo. Sed purus magna, vulputate aliquet ligula eget, consectetur sagittis nunc.
-              </p>
-              <p className={SageClassnames.TYPE.BODY}>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse urna leo, condimentum nec pellentesque finibus, ultricies pulvinar ante. Donec eu interdum ligula. Pellentesque aliquam ullamcorper orci, nec tempor libero tristique in. Aliquam vitae felis at leo condimentum placerat eget id libero. In dictum tortor ac accumsan aliquam. Donec sit amet tortor porttitor, tincidunt nisl at, egestas lacus. Integer metus augue, aliquet accumsan vulputate eget, tristique id erat. Donec a venenatis nibh, ac molestie risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus in orci vitae ex tempor ultrices in a leo. Sed purus magna, vulputate aliquet ligula eget, consectetur sagittis nunc.
-              </p>
-              <p className={SageClassnames.TYPE.BODY}>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse urna leo, condimentum nec pellentesque finibus, ultricies pulvinar ante. Donec eu interdum ligula. Pellentesque aliquam ullamcorper orci, nec tempor libero tristique in. Aliquam vitae felis at leo condimentum placerat eget id libero. In dictum tortor ac accumsan aliquam. Donec sit amet tortor porttitor, tincidunt nisl at, egestas lacus. Integer metus augue, aliquet accumsan vulputate eget, tristique id erat. Donec a venenatis nibh, ac molestie risus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus in orci vitae ex tempor ultrices in a leo. Sed purus magna, vulputate aliquet ligula eget, consectetur sagittis nunc.
-              </p>
-            </Modal.Body>
-            <Modal.Footer>
-              <Modal.FooterAside>
-                <Button
-                  color={Button.COLORS.SECONDARY}
-                  onClick={onExit}
-                  subtle={true}
-                >
-                  Link
-                </Button>
-              </Modal.FooterAside>
-              <Button
-                color={Button.COLORS.SECONDARY}
-                onClick={onExit}
-              >
-                Cancel
-              </Button>
-              <Button
-                color={Button.COLORS.PRIMARY}
-                onClick={onExit}
-              >
-                Confirm
-              </Button>
-            </Modal.Footer>
-          </Modal>
-        </>
-      )
-    }}  
-  </Story>
-</Canvas>
-
-## Sizes
+### Sizes
 Modal widths can be configured to be extra small, small, medium, or large.
 <Canvas>
-  <Story name="Sizes">
-    {(args) => {
-      const [active, setActive] = useState(false);
-      const [isClosing, setIsClosing] = useState(false);
-      const onExit = () => {
-        setIsClosing(true);
-        setTimeout(() => {
-          setActive(false);
-          setIsClosing(false);
-        }, 1000);
-      };
-      return (
-        <>
-          <Button
-            color={Button.COLORS.PRIMARY}
-            onClick={() => setActive(true)}
-          >
-            Open xs Modal
-          </Button>
-          <Modal
-            {...args}
-            active={active}
-            isClosing={isClosing}
-            onExit={onExit}
-          >
-            <Modal.Header
-              title="Modal header"
-              aside={(
-                <Button
-                  color={Button.COLORS.SECONDARY}
-                  iconOnly={true}
-                  icon={SageTokens.ICONS.REMOVE}
-                  onClick={onExit}
-                  subtle={true}
-                >
-                  Close modal
-                </Button>
-              )}
-            />
-            <Modal.Body gap={Modal.Body.GAP_OPTIONS.LG}>
-              <p className={SageClassnames.TYPE.BODY}>
-                Add a description of the content you're showing in the modal.
-              </p>
-            </Modal.Body>
-            <Modal.Footer>
-              <Modal.FooterAside>
-                <Button
-                  color={Button.COLORS.SECONDARY}
-                  onClick={onExit}
-                  subtle={true}
-                >
-                  Link
-                </Button>
-              </Modal.FooterAside>
-              <Button
-                color={Button.COLORS.SECONDARY}
-                onClick={onExit}
-              >
-                Cancel
-              </Button>
-              <Button
-                color={Button.COLORS.PRIMARY}
-                onClick={onExit}
-              >
-                Confirm
-              </Button>
-            </Modal.Footer>
-          </Modal>
-        </>
-      )
-    }}  
+  <Story name="Sizes"
+    args={{
+      size: Modal.SIZES.LG
+    }}>
+    { Template.bind({}) }
   </Story>
 </Canvas>
 
-## Fullscreen
+### Fullscreen
 Modals can be configured to take up the full screen.
 <Canvas>
-  <Story name="Fullscreen">
-    {(args) => {
-      const [active, setActive] = useState(false);
-      const [isClosing, setIsClosing] = useState(false);
-      const onExit = () => {
-        setIsClosing(true);
-        setTimeout(() => {
-          setActive(false);
-          setIsClosing(false);
-        }, 1000);
-      };
-      return (
-        <>
-          <Button
-            color={Button.COLORS.PRIMARY}
-            onClick={() => setActive(true)}
-          >
-            Open Modal
-          </Button>
-          <Modal
-            {...args}
-            active={active}
-            fullScreen={true}
-            isClosing={isClosing}
-            onExit={onExit}
-          >
-            <Modal.Header
-              title="Modal header"
-              aside={(
-                <Button
-                  color={Button.COLORS.SECONDARY}
-                  iconOnly={true}
-                  icon={SageTokens.ICONS.REMOVE}
-                  onClick={onExit}
-                  subtle={true}
-                >
-                  Close modal
-                </Button>
-              )}
-            />
-            <Modal.Body gap={Modal.Body.GAP_OPTIONS.LG}>
-              <p className={SageClassnames.TYPE.BODY}>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
-              </p>
-              <p className={SageClassnames.TYPE.BODY}>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
-              </p>
-            </Modal.Body>
-            <Modal.Footer>
-              <Modal.FooterAside>
-                <Button
-                  color={Button.COLORS.SECONDARY}
-                  onClick={onExit}
-                  subtle={true}
-                >
-                  Link
-                </Button>
-              </Modal.FooterAside>
-              <Button
-                color={Button.COLORS.SECONDARY}
-                onClick={onExit}
-              >
-                Cancel
-              </Button>
-              <Button
-                color={Button.COLORS.PRIMARY}
-                onClick={onExit}
-              >
-                Confirm
-              </Button>
-            </Modal.Footer>
-          </Modal>
-        </>
-      )
-    }}
-    
+  <Story name="Fullscreen"
+    args={{
+      fullScreen: true
+    }}>
+    { Template.bind({}) }
   </Story>
 </Canvas>
 
-### Kitchen Sink
+### Scrollable Content
+Modals can be configured to allow scrolling of content. This option is useful when the header and footer needs to visible contain actions.
 <Canvas>
-  <Story name="Kitchen Sink">
-    {(args) => {
-      const [active, setActive] = useState(false);
-      const [isClosing, setIsClosing] = useState(false);
-      const onExit = () => {
-        setIsClosing(true);
-        setTimeout(() => {
-          setActive(false);
-          setIsClosing(false);
-        }, 1000);
-      };
-      return (
-        <>
-          <Button
-            color={Button.COLORS.PRIMARY}
-            onClick={() => setActive(true)}
-          >
-            Open Modal
-          </Button>
-          <Modal
-            {...args}
-            active={active}
-            isClosing={isClosing}
-            onExit={onExit}
-          >
-            <Modal.Header
-              icon={{ color: Icon.COLORS.RED_200, name: Icon.ICONS.DANGER }}
-              title="Modal header"
-              popover={{
-                title: 'Example popover title',
-                link: '#',
-                linkText: 'Learn more about modals',
-                content: 'Popover content'
-              }}
-              aside={(
-                <Button
-                  color={Button.COLORS.SECONDARY}
-                  iconOnly={true}
-                  icon={SageTokens.ICONS.REMOVE}
-                  onClick={onExit}
-                  subtle={true}
-                >
-                  Menu
-                </Button>
-              )}
-            />
-            <Modal.Body gap={Modal.Body.GAP_OPTIONS.LG}>
-              <p className={SageClassnames.TYPE.BODY}>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
-              </p>
-              <p className={SageClassnames.TYPE.BODY}>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
-              </p>
-            </Modal.Body>
-            <Modal.Footer>
-              <Modal.FooterAside>
-                <Button
-                  color={Button.COLORS.SECONDARY}
-                  onClick={onExit}
-                  subtle={true}
-                >
-                  Link
-                </Button>
-              </Modal.FooterAside>
-              <Button
-                color={Button.COLORS.SECONDARY}
-                onClick={onExit}
-              >
-                Cancel
-              </Button>
-              <Button
-                color={Button.COLORS.PRIMARY}
-                onClick={onExit}
-              >
-                Confirm
-              </Button>
-            </Modal.Footer>
-          </Modal>
-        </>
-      )
-    }}
-    
+  <Story name="Scrollable Content"
+    args={{
+      allowScroll: true
+    }}>
+    { Template.bind({}) }
   </Story>
 </Canvas>
+
+## Header Variants
+### Header Icon
+
+### Header Image
+
+### Subheader
+
+## Footer Variants
+### Footer
+Modals contain a footer that can contain buttons and links
+
+### Footer Aside
+The footer aside is a section of the footer that can contain additional buttons or links.
+
+
 
 The Modal allows us to format a modal window according to Sage design specs and includes the following features:
 
