docs(panel): adds link to grid templates and updates text for panel row

--- a/packages/sage-react/lib/Panel/Panel.story.mdx
+++ b/packages/sage-react/lib/Panel/Panel.story.mdx
@@ -184,7 +184,7 @@ This area often contains one or more buttons that can be sent to the right edge 
 
 #### Panel Row
 
-A panel row is a single or isolated inline arrangement of elements. It can either be a custom component or employ one of the standard Grid Template Patterns.
+A panel row is a single or isolated inline arrangement of elements. It can either be a custom component or employ one of the standard [Grid Template Patterns](https://sage.kajabi.com/pages/patterns/grid_templates).
 
 <Canvas
   mdxSource={`
@@ -366,7 +366,7 @@ The Divider is a thin rule that helps to provide additional visual separation be
 
 #### Panel Figure
 
-A panel figure contains an image that occupies a substantive space in the panel, typically filling edge to edge.
+A panel figure contains an image that occupies a substantive space in the panel.
 
 <Canvas
   mdxSource={`
