fix(icon): adjust text alignment variant

--- a/packages/sage-react/lib/Icon/Icon.story.mdx
+++ b/packages/sage-react/lib/Icon/Icon.story.mdx
@@ -127,7 +127,7 @@ The `adjacentType` property can be used to align an icon next to a heading or pa
 <Canvas>
   <Story name="Adjacent Type">
     <div style={{ display: "flex", gap: "16px" }}>
-      <Icon adjacentType="h2" icon="pen" />
+      <Icon adjacentType="h2" icon="pen" size="xl" />
       <h2>This is an H2 headline.</h2>
     </div>
     <div style={{ display: "flex", gap: "16px" }}>
