--- a/packages/sage-react/lib/EmptyState/EmptyState.story.mdx
+++ b/packages/sage-react/lib/EmptyState/EmptyState.story.mdx
@@ -11,7 +11,7 @@ The Empty State is displayed for main application features that have never been 
 
 ## Accessibility
 
-Ensure images or graphics that are used in the Empty State component *do not* include alt text so that the image remains decorative and invisible to screen readers.
+Ensure images or graphics that are used in the Empty State component *do not* include `alt` text so that the image remains decorative and invisible to screen readers.
 
 ## Properties
 
